style.css
/* ... */
.master-hero__black-overlay{
  min-height: 470px;
  width: 100%;
  position: absolute;
  top: 0;
  background-image: linear-gradient(90deg, rgba(0,0,0,.7) 0%, rgba(0,0,0,0) 60%);
}
.master-hero__link{
  width: fit-content;
}
.hero__link,
.master-hero__btn-container .master-hero__link,
.hero__btn-container .master-hero__link{
  margin-right: 10px;
  margin-top: 10px;
}
.master-hero__overlay{
  width: 100%;
  position: absolute;
  bottom: 40px;
  /* This line allow us work better if we are playing with the info of the master hero */
  /* display: none;*/
}
.master-hero__overlay-container{
  max-width: 1240px;
  /* min-height: 470px; */
  margin: auto;
  position: relative;
}
.master-hero__overlay-titles-list{
  display: grid;
  position: absolute;
  /* bottom: -20px; */
  grid-template-columns: repeat(5, 1fr);
  min-width: 839px;
  width: 80%;
  max-width: 1000px;
  background-color: var(--white);
  padding: 0px 20px;
  box-sizing: border-box;
}
.master-hero__overlay-progress{
  position: absolute;
  top: 0px;
  left: 20px;
  height: 6px;
  background-color: var(--red-marvel);
}
.master-hero__overlay-titles-item{
  cursor: pointer;
  padding: 20px 30px 20px 0;
}
.master-hero__overlay-title{
  font-weight: var(--bold);
  font-size: 14px;
}
.master-hero__info{
  color: var(--white);
  position: relative;
  height: 100%;
  display: flex;
  align-items: center;
}
.master-hero__info-container{
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 20px;
}
.master-hero__title{
  font-size: 44px; /*100/90026*/
  text-transform: uppercase;
  font-family: var(--condensed-bold);
  margin-bottom: 10px;
}
.master-hero__subtitle{
  letter-spacing: 0;
  font-size: 16px;
  margin-bottom: 10px;
}
.master-hero__title,
.master-hero__subtitle{
  max-width: 55%;
}

/* Hero */
.hero{
  position: relative;
  display: flex;
  overflow: hidden;
  min-height: fit-content;
  max-height: 560px;
  clip-path: polygon(0 0, 0 100%, 100% 90%, 100% 0% );
}
.hero__black-container{
  display: flex;
  align-content: center;
  justify-content: flex-start;
  flex-grow: 1;
  top: 0px;
  height: 560px;
  width: 100%;
  background-color: var(--dark);
  color: white;
  z-index: 2;
  clip-path: polygon(0 0, 0 100%, 55% 100%, 45% 0% );
}
.hero__content-container{
  flex-grow: 1;
  max-width: 1240px;
  margin: auto;
  padding-left: 50px;
  box-sizing: border-box;
  height: 100%;
  display:flex;
  flex-direction: column;
  justify-content: center;
}
.hero__img-container{
  align-self: center;
  z-index: -1;
  position: absolute;
  left: 45%;
  width: 55%;
  height: 100%;
  display: flex;
  justify-self: flex-end;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.hero--first{
  background-image: url('https://terrigen-cdn-dev.marvel.com/content/prod/1x/marvelunlimited_base_set_dsk.jpg');
}
.hero--second{
  background-image: url('https://terrigen-cdn-dev.marvel.com/content/prod/1x/disneyplusall_base_set_04.jpg'  );
}
.hero--third{
  background-image: url('https://terrigen-cdn-dev.marvel.com/content/prod/1x/0420_mu_base_set_dsk.jpg')
}
.hero--fourth{
      background-image: url('https://terrigen-cdn-dev.marvel.com/content/prod/1x/new_com_20200518_set_01.jpg')
}
.hero__content{
  max-width: 40%;
  padding-left: 20px;
}
.hero__content-img{
  max-width: 80vw;
}
.master-hero__eyebrown,
.hero__eyebrown,
.tipical-grid__title-container,
.feed__latest-title-container {
  width: 100%;
  background-image: url('./static/Latest.svg');
  background-repeat: no-repeat;
  background-position: center left;
  padding: 26px 0px;
}
.master-hero__eyebrown-content,
.hero__eyebrown-content,
.tipical-grid__title,
.feed__hype-title,
.feed__latest-title {
  font-size: 26px;
  font-family: var(--condensed-bold);
  letter-spacing: 1px;
  text-transform: uppercase;
}
.master-hero__eyebrown-content,
.hero__eyebrown-content{
  font-size: 20px; 
  letter-spacing: 3px;
  color: var(--white);
}
.master-hero__eyebrown-content{
  font-size: 16px;
}
.hero__title{
  text-transform: uppercase;
  font-family: var(--condensed-bold);
  font-size: 40px;/*26 pixel*/
  padding-top:10px;
  padding-bottom:10px;
}
.hero__description{
  font-size: 16px;
  padding-bottom: 14px;
}
.master-hero__btn-container,
.hero__btn-container{
  display: flex;
}

/* Hero footer */

.hero-footer--grid-4{
  min-height: 270px;
  height: 270px;
}
.hero-footer__list{
  max-width: 1145px;
  min-width: 780px;
  padding: 30px 20px;
  margin: auto;
}
.hero-footer__list--grid-4{
  display: grid;
  grid-template-columns: repeat(4, minmax(170px, 1fr));
  grid-template-rows: minmax(270px, 1fr);
  grid-column-gap: 20px;
  background-color: var(--white);
  position: relative;
  bottom: 60px;
}
.hero-footer__list--grid-6{
  display: grid;
  grid-template-columns: repeat(6, 174px);
  grid-template-rows: minmax(210px, 1fr);
  grid-column-gap: 20px;
  margin: auto;
  background-color: var(--white);
  position: relative;
  bottom: 60px;
  overflow: auto;
  /* min-width: 1145px; */
}
.hero-footer__img-container{
  width: 100%;
}
.hero-footer__img{
  width: 100%;
}
.hero-footer__item-title,
.tipical-grid__item-title{
  font-weight: var(--bold);
  font-size: 15px;
  margin-top: 8px;
}
.hero-footer__item-title{
  padding-right: 10px;
}
.tipical-grid__item-section--red,
.work-card__title,
.hero-footer__item-section{
  color: var(--red-marvel); 
  line-height: 1;
  letter-spacing: 1px;
  font-family: var(--condensed-bold);
  text-transform: uppercase;
  font-size: 14px;
  margin-top: 20px;
}
.work-card__title{
  margin-top: 18px;
  color: var(--dark);
}
.work-card__year{
  font-weight: var(--bold);
  letter-spacing: 1px;
  font-size: 12px;
  text-transform: uppercase;
  color: var(--dark-gray);
}
.hero-footer__list--works{
  display: grid;
  grid-template-columns: repeat(22, 175px);
  grid-column-gap: 20px;
  overflow: auto;
  position: relative;
  bottom: 70px;
  background-color: var(--white);
}
.hero-footer__list--grid-6 .work-card{
  max-width: 175px;
}
/* ... */

